# libsecutils

./: .gitignore  AUTHORS  CMakeLists.txt  COPYING  Doxyfile  EXPORT.md  LICENSE.txt  MAINTAINERS  Makefile  Makefile_v1  README.md  ReadMe_OSS.md
.github/workflows/: build.yml
cmake/: CPackDebianPackageSettings.cmake
coverage/: .gitignore  Makefile
debian/: changelog  compat.license  control  copyright  libsecutils-bins.install  libsecutils-dev.install  libsecutils.install  libsecutils2.install  rules
debian/extra/: libsecutils2.lintian-overrides  postrm
debian/source/: options
include/secutils/: basic.h  secutils_static_config.h.in  static_config.h  static_config.h.in
include/secutils/certstatus/: cdp_util.h  certstatus.h  crl_mgmt.h  crls.h  ocsp.h
include/secutils/config/: config.h  config_update.h  opt.h
include/secutils/connections/: tls.h
include/secutils/credentials/: cert.h  credentials.h  key.h  store.h  trusted.h  verify.h
include/secutils/crypto/: crypto.h
include/secutils/storage/: files.h  files_dv.h  files_icv.h  uta_api.h
include/secutils/util/: extensions.h  log.h  util.h
man/: icvutil.1
src/: CMakeLists.txt  libsecutils.pc.in  security-utilities.pc.in
src/certstatus/: cdp_util.c  certstatus.c  crl_mgmt.c  crls.c  ocsp.c
src/config/: config.c  config_update.c  opt.c
src/connections/: conn.c  http.c  tls.c
src/credentials/: cert.c  credentials.c  key.c  store.c  trusted.c  verify.c
src/crypto/: crypto.c
src/libsecutils/: CMakeLists.txt  security-utilities_libraryConfig.cmake  siemens_libsecutilsConfig.cmake
src/libsecutils/include/: CMakeLists.txt
src/libsecutils/include/secutils/: CMakeLists.txt  basic.h  operators.h  secutils_static_config.h.in
src/libsecutils/include/secutils/certstatus/: CMakeLists.txt  cdp_util.h  certstatus.h  crl_mgmt.h  crls.h  ocsp.h
src/libsecutils/include/secutils/config/: CMakeLists.txt
src/libsecutils/include/secutils/connections/: CMakeLists.txt  conn.h  http.h  tls.h
src/libsecutils/include/secutils/credentials/: CMakeLists.txt  cert.h  credentials.h  key.h  store.h  trusted.h  verify.h
src/libsecutils/include/secutils/crypto/: CMakeLists.txt  crypto.h
src/libsecutils/include/secutils/storage/: CMakeLists.txt  files_dv.h  files_icv.h  uta_api.h
src/libsecutils/include/secutils/util/: CMakeLists.txt  util.h
src/libsecutils/src/: CMakeLists.txt
src/libsecutils/src/certstatus/: CMakeLists.txt  cdp_util.c  certstatus.c  crl_mgmt.c  crls.c  ocsp.c
src/libsecutils/src/config/: CMakeLists.txt  config.c  config_update.c
src/libsecutils/src/connections/: CMakeLists.txt  conn.c  http.c  tls.c
src/libsecutils/src/credentials/: CMakeLists.txt  cert.c  credentials.c  key.c  store.c  verify.c
src/libsecutils/src/crypto/: CMakeLists.txt  crypto.c
src/libsecutils/src/storage/: CMakeLists.txt  files.c  files_dv.c  files_icv.c  uta_api.c
src/libsecutils/src/util/: CMakeLists.txt  extensions.c  log.c  util.c
src/storage/: files.c  files_dv.c  files_icv.c  uta_api.c
src/util/: CMakeLists.txt  Makefile_v1  extensions.c  icvutil.c  log.c  security-utilities_icvutilConfig.cmake  siemens_icvutilConfig.cmake  util.c
util/: Makefile  icvutil.c
